# finalproject_dublin_yandex

./: .gitignore  README.md  demo.cast  pyproject.toml  wallet.json
data/: exchange_rates.json  portfolios.json  rates.json  users.json
src/finalproject_dublin/: __init__.py  cli.py
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
