[tool.poetry]
name = "finalproject_dublin"
version = "0.1.0"
description = "Platform for tracking and simulated currency trading"
authors = ["Kirill Dublin <kirill@example.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.12.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.valutatrade]
DATA_DIR = "data"
USERS_FILE = "data/users.json"
PORTFOLIOS_FILE = "data/portfolios.json"
RATES_FILE = "data/rates.json"
RATES_TTL_SECONDS = 300
DEFAULT_BASE_CURRENCY = "USD"
LOG_FILE = "logs/actions.log"
LOG_LEVEL = "INFO"
LOG_FORMAT = "text"
LOG_MAX_BYTES = 1048576
LOG_BACKUP_COUNT = 3
PARSER_LOG_FILE = "logs/parser.log"
EXCHANGE_HISTORY_FILE = "data/exchange_rates.json"
REQUEST_TIMEOUT = 10
